[package]
name = "halo2-rsa"
version = "0.1.0"
edition = "2021"
authors = ["Sora Suegami"]
description = "RSA verification circuit in halo2."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
halo2-dynamic-sha256 = { git = "https://github.com/SoraSuegami/halo2-dynamic-sha256.git", version = "0.1.0", rev = "46dc9c31ca0678bd4d047b54a2944ff2b3594f65"}
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8"
ff = "0.13"

snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier"}

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
rand = "0.8.5"
rsa = "0.6.1"
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
